@@ -5,23 +5,20 @@ import javax.servlet.annotation.WebServlet;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
 
-
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 @WebServlet("/logout")
 public class LogoutServlet extends HttpServlet {
-    public LogoutServlet(){
-        super();
-    }
+
     private static final String KAKAO_LOGOUT_URL = "https://kapi.kakao.com/v1/user/logout";
+
     protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+
+        System.out.println("[POST] LogoutServlet 호출");
 
         // 세션에서 액세스 토큰 가져오기
         String accessToken = (String) request.getSession().getAttribute("accessToken");
@@ -29,7 +26,7 @@ public class LogoutServlet extends HttpServlet {
 
         if (accessToken != null) {
             // 카카오 로그아웃 요청
-            URL url = new URL(KAKAO_LOGOUT_URL);
+            URL url = URI.create(KAKAO_LOGOUT_URL).toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("POST");
             conn.setRequestProperty("Authorization", "Bearer " + accessToken);
